update project settings and dependencies

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,19 @@
+# ========================
 # Django Settings
-SECRET_KEY=your_secret_key_here
-DEBUG=False
-ALLOWED_HOSTS=your_domain.railway.app,www.your_domain.railway.app
+# ========================
+SECRET_KEY=e7p67m^5ke_tiou49p#=495ix+p8bcs1dwwnyyrtb(0gn1+!13
+DEBUG=True
+ALLOWED_HOSTS=localhost,127.0.0.1
 
+# ========================
 # Database
+# ========================
 DATABASE_URL=postgresql://user:password@host:port/database
 
+# ========================
 # Email Configuration
+# ========================
 EMAIL_HOST_USER=your_email@gmail.com
 EMAIL_HOST_PASSWORD=your_app_password
 DEFAULT_FROM_EMAIL=your_email@gmail.com
+OWNER_EMAIL=your_email@gmail.com
